# matrix-ctl

./: CLAUDE.md  README.md  pyproject.toml
examples/: hermes-config.md
hermes/matrixctl/: SKILL.md
matrixctl/: __init__.py  cli.py  client.py  contacts.py  hermes_client.py  transport.py
tests/: conftest.py  test_cli.py  test_hermes_client.py  test_transport_select.py
