[project]
name = "matrixctl"
version = "0.1.0"
description = "A small non-interactive CLI for automating Matrix via the Client-Server API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
matrixctl = "matrixctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matrixctl"]
